@@ -57,10 +57,10 @@ import org.slf4j.LoggerFactory;
 import com.esotericsoftware.kryo.Kryo;
 import com.esotericsoftware.kryo.io.Input;
 import com.esotericsoftware.kryo.io.Output;
-import o.a.c.sidecar.client.shaded.common.NodeSettings;
-import o.a.c.sidecar.client.shaded.common.data.ListSnapshotFilesResponse;
-import o.a.c.sidecar.client.shaded.common.data.RingResponse;
-import o.a.c.sidecar.client.shaded.common.data.SchemaResponse;
+import o.a.c.sidecar.client.shaded.common.response.ListSnapshotFilesResponse;
+import o.a.c.sidecar.client.shaded.common.response.NodeSettings;
+import o.a.c.sidecar.client.shaded.common.response.RingResponse;
+import o.a.c.sidecar.client.shaded.common.response.SchemaResponse;
 import org.apache.cassandra.bridge.BigNumberConfig;
 import org.apache.cassandra.bridge.BigNumberConfigImpl;
 import org.apache.cassandra.bridge.CassandraBridge;
